ajout bouton pour load le xml et test sur vrai exemple d'xml

--- a/frontEnd/front/src/app/app.component.html
+++ b/frontEnd/front/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="test">Hydro</div>
-<button (click)="print()">printConsole</button>
-
+<button (click)="print()">print console</button> 
+<button (click)="load()">load xml</button> 
 <br><br>
 
 <p-table [value]="parameters">
@@ -11,7 +11,7 @@
             <th>Value</th>
             <th>Default value</th>
             <th>Possible values</th>
-                <th>Rules</th>
+            <th>Rules</th>
             <th>Description</th>
         </tr>
     </ng-template>
