correction bug affichage + séparation traitement en 2 composants

--- a/frontEnd/front/src/app/app.component.html
+++ b/frontEnd/front/src/app/app.component.html
@@ -1,145 +1,3 @@
-<!-- <div class="test">Hydro</div> -->
-<!-- <button (click)="print()">print console</button>  -->
-<button (click)="load()">load xml</button> 
-<br><br>
+<app-header></app-header>
+<app-body></app-body>
 
-
-<p-table [value]="parameters" dataKey="name"> <!-- on prend la variable parameters du ts pour iterer dessus plus tard -->
-    <ng-template pTemplate="header"> <!-- haut de la table-->
-        <tr>
-            <th>Name</th>
-            <th>Type</th>
-            <th>Value</th>
-            <th>Default value</th>
-            <th>Possible values</th>
-            <th>Rules</th>
-            <th>Description</th>
-        </tr>
-    </ng-template>
-
-
-    <ng-template  pTemplate="body" let-parameter let-expanded="expanded"> <!-- corps de la table -->
-
-        <!-- **************** traitement pour les Parameter = cas de fin de la recursivite -->
-        <tr *ngIf="isParameter(parameter)">
-            <td>{{ parameter.name }}</td>
-            <td>{{ parameter.type }}</td>
-            <td>
-                <input type="text">
-                <button>change parameter</button>
-            </td>
-            <td>{{ parameter.default_value }}</td>
-            <td>{{ parameter.possible_values }}</td>   
-            <td>X</td>
-            <td>{{ parameter.description }}</td>
-        </tr>
-
-
-
-        <!-- **************** traitement pour les ParametersGroup = cas de recursivite -->
-        <tr *ngIf="!isParameter(parameter)">
-            <td colspan="5">
-                <button type="button" pButton pRipple [pRowToggler]="parameter" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></button> <!-- bouton de deroulement -->
-                <!-- class="p-button-text p-button-rounded p-button-plain mr-2" -->
-                <span>{{ parameter.name }}</span>
-            </td>
-        </tr>
-    </ng-template>
-    <ng-template pTemplate="rowexpansion" let-parameter> <!-- contenu quand on appuie sur le bouton pour le deroulement -->
-        <tr>
-            <td colspan="7">
-                    <p-table [value]="parameters" dataKey="name"> <!-- on creer la table -->
-                        <ng-template pTemplate="body" let-parameter> <!-- contenu de la table -->
-                    
-                            <tr *ngIf="existParamGroup(parameter)"> <!-- on verifie si la variable a un parameterGroups -->
-                                <app-root [parameters]="parameter.ParametersGroup"></app-root> <!-- on rappelle le composant avec le parameter -->
-                            </tr>
-                            <tr *ngIf="existParam(parameter)"> <!-- on verifie si la variable a un parameter -->
-                                <app-root [parameters]="parameter.parameters"></app-root> <!-- on rappelle le composant avec le parameter = recursivite -->
-                            </tr>
-                        </ng-template>
-                    </p-table>
-            </td>
-        </tr>
-    </ng-template>
-
-
-<p-table/>
-
-<!-- <td colspan="2">
-                    <app-root [parameters]="parameter.ParametersGroup"></app-root>
-                  </td> -->
-
-<!-- [expandedRowKeys]="expandedRows" -->
-
-<!-- <p-table [value]="parameters" >
-    <ng-template pTemplate="header">
-      <tr>
-        <th>Name</th>
-        <th>Age</th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-parameter let-expanded="expanded">
-      <tr>
-        <td>
-          <a href="#" (click)="toggleRow(parameter)">
-            <i [ngClass]="expanded ? 'pi pi-minus' : 'pi pi-plus'"></i>
-            {{ parameter.name }}
-          </a>
-        </td>
-        <td>{{ parameter.age }}</td>
-      </tr>
-      <tr *ngIf="expanded">
-        <td colspan="2">
-          <app-root [parameters]="parameter.ParametersGroup"></app-root>
-        </td>
-      </tr>
-    </ng-template>
-  </p-table> -->
-
-
-<!-- <p-table [value]="parameters" sortField="representative.name" sortMode="single" dataKey="representative.name" rowGroupMode="subheader" groupRowsBy="representative.name" [tableStyle]="{'min-width': '70rem'}">
-    <ng-template pTemplate="header">
-        <tr>
-            <th style="width:20%">Expand</th>
-            <th style="width:20%">Name</th>
-            <th style="width:20%">Country</th>
-            <th style="width:20%">Company</th>
-            <th style="width:20%">Status</th>
-            <th style="width:20%">Date</th>
-        </tr>
-    </ng-template>
-<ng-template pTemplate="groupheader" let-customer let-rowIndex="rowIndex" let-expanded="expanded">
-    <tr>
-        <td colspan="5">
-            <button type="button" pButton pRipple [pRowToggler]="customer" class="p-button-text p-button-rounded p-button-plain mr-2" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></button>
-            <img [alt]="customer.representative.name" src="https://primefaces.org/cdn/primeng/images/demo/avatar/{{customer.representative.image}}" width="32" style="vertical-align: middle" />
-            <span class="font-bold ml-2">{{customer.representative.name}}</span>
-        </td>
-    </tr>
-</ng-template>
-<ng-template pTemplate="groupfooter" let-customer>
-    <tr class="p-rowgroup-footer">
-        <td colspan="4" style="text-align: right">Total Customers</td>
-        <td>test</td>
-    </tr>
-</ng-template>
-<ng-template pTemplate="rowexpansion" let-customer>
-    <tr>
-        <td>
-            {{customer.name}}
-        </td>
-        <td>
-            <img src="https://primefaces.org/cdn/primeng/images/demo/flag/flag_placeholder.png" [class]="'flag flag-' + customer.country.code" style="width: 20px">
-            <span class="ml-1 vertical-align-middle">{{customer.country.name}}</span>
-        </td>
-        <td>
-            {{customer.company}}
-        </td>
-        <td>test</td>
-        <td>
-            {{customer.date}}
-        </td>
-    </tr>
-</ng-template> 
-<p-table>-->
