add routing and new folder, new component to keep the project clean

--- a/frontEnd/front/src/app/components/xmlView/header/header.component.html
+++ b/frontEnd/front/src/app/components/xmlView/header/header.component.html
@@ -2,9 +2,8 @@
 
 <br><br>
 
-<!-- button load xml -->
-<p-table> <!-- on prend la variable parameters du ts pour iterer dessus plus tard -->
-    <ng-template pTemplate="header"> <!-- haut de la table-->
+<p-table> 
+    <ng-template pTemplate="header"> <!-- head of the table-->
         <tr>
             <th>Name</th>
             <th>Type</th>
