--- a/frontEnd/front/src/styles.scss
+++ b/frontEnd/front/src/styles.scss
@@ -4,3 +4,9 @@ body {
     font-family: var(--font-family);
 }
 
+.p-button.p-button-icon-tiny{
+    font-size: 0.875rem;
+    padding: 0.1rem 0.1rem;
+    width: 1rem;
+    margin-right: 0.4rem;
+}
