--- a/frontEnd/front/src/app/components/menu/menu.component.html
+++ b/frontEnd/front/src/app/components/menu/menu.component.html
@@ -2,4 +2,17 @@
 
 <h3>Choose your xml</h3>
 
+
+<select name="xml" id="xml-select">
+    <option value="">--Please choose an xml--</option>
+    <option *ngFor="let xml of xmlNames">{{xml}}</option>
+
+</select>
+
+<!-- <li *ngFor="let name of xmlNames">{{ name }}</li> -->
+
+
+<br><br>
+
+
 <a routerLink="/xmlView">Vue du xml</a>
