--- a/frontEnd/front/src/app/components/xmlView/xml/xml.component.html
+++ b/frontEnd/front/src/app/components/xmlView/xml/xml.component.html
@@ -1,7 +1,17 @@
 <!-- routerlink intercept the click event to change the route without having to reload the entire app -->
-<a routerLink="/menu">Back to menu</a> 
+<a routerLink="/menu">Back to menu</a>
 
-<app-header></app-header>
-<button (click)="jsonToXml()">convert</button>
 
-<app-body [parameters] = "[parameters]"></app-body>
+<div class="main">
+    <div class="float-table">
+        <app-header></app-header>
+        <button (click)="jsonToXml()">convert</button>
+
+        <app-body [parameters] = "[parameters]"></app-body>
+    </div>
+
+    <div class="float-history">
+        <io-tree-history style="height: 80%" [svgIconSize]="60" >
+        </io-tree-history>
+    </div>
+</div>
