--- a/frontEnd/front/src/app/components/xmlView/xml/xml.component.html
+++ b/frontEnd/front/src/app/components/xmlView/xml/xml.component.html
@@ -3,7 +3,7 @@
 
 <br><br>
 
-<button (click)="parseIntoJson()">parse</button>
+<button (click)="parseIntoJson()">afficher Xml</button>
 
 
 <br><br>
