--- a/frontEnd/front/src/app/components/xmlView/xml/xml.component.html
+++ b/frontEnd/front/src/app/components/xmlView/xml/xml.component.html
@@ -3,12 +3,18 @@
 
 <br><br>
 
-<button (click)="parseIntoJson()">parse</button>
+
+<button (click)="parseIntoJson()">afficher Xml</button>
 
 
 <br><br>
 
-<button (click)="jsonToXml()">convert</button>
+    <!-- <button (click)="jsonToXml()">convert</button>
+
+    <br><br> -->
+
+<button >RUN!</button>
+
 
 <div class="main">
     <div class="float-table">
