--- a/frontEnd/front/src/app/components/xmlView/xml/xml.component.html
+++ b/frontEnd/front/src/app/components/xmlView/xml/xml.component.html
@@ -1,30 +1,34 @@
 <!-- routerlink intercept the click event to change the route without having to reload the entire app -->
 <a routerLink="/menu">Back to menu</a>
 
-<br><br>
+    <br><br>
 
-<button (click)="parseIntoJson()">afficher Xml</button>
+<button (click)="parseIntoJson()">load data</button>
 
 
-<br><br>
+    <br><br>
 
-    <!-- <button (click)="jsonToXml()">convert</button>
+<button (click)="jsonToXml()">convert to XML</button>
 
-    <br><br> -->
+    <br><br>
 
 <button >RUN!</button>
 
 
-<div class="main">
-    <div class="float-table">
-        <app-header></app-header>
+<app-header></app-header>
         
 
-        <app-body [parameters] = "[parameters]"></app-body>
+<app-body [parameters] = "[parameters]"></app-body>
+
+
+<!-- 
+<div class="main">
+    <div class="float-table">
+       
     </div>
 
     <div class="float-history">
         <io-tree-history style="height: 80%" [svgIconSize]="60" >
         </io-tree-history>
     </div>
-</div>
+</div> -->
