add new component: ResultComponent

--- a/frontEnd/front/src/app/components/xmlView/header/header.component.html
+++ b/frontEnd/front/src/app/components/xmlView/header/header.component.html
@@ -1,7 +1,3 @@
-<div class="title">Hydro</div>
-
-<br><br>
-
 <p-table> 
     <ng-template pTemplate="header"> <!-- head of the table-->
         <tr>
@@ -14,3 +10,4 @@
             <th>Description</th>
         </tr>
     </ng-template>
+<p-table>
