--- a/frontEnd/front/src/app/components/xmlView/xml/xml.component.html
+++ b/frontEnd/front/src/app/components/xmlView/xml/xml.component.html
@@ -1,3 +1,6 @@
+<div class="title">Hydro</div>
+
+
 <!-- routerlink intercept the click event to change the route without having to reload the entire app -->
 <a routerLink="/menu">Back to menu</a>
 
@@ -12,7 +15,7 @@
 
     <br><br>
 
-<button (click)="runForecast()">RUN!</button>
+<button (click)="runCydre()">RUN!</button>
 
 
 <app-header></app-header>
