added switch language

--- a/frontEnd/front/src/app/header/header.component.html
+++ b/frontEnd/front/src/app/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<div>
+    <p></p>
+</div>
+<div>
+    <select class="form-control" [(ngModel)]="selectLang" name="selectLang" (change)="setTransLanguage()">
+        <option *ngFor="let lang of transLang" value="{{lang}}" selected="selectLang">{{ lang }}</option>
+    </select>
+</div>
