--- a/frontEnd/front/src/app/header/header.component.html
+++ b/frontEnd/front/src/app/header/header.component.html
@@ -1,5 +1,5 @@
-<div>
-    <p></p>
+<div class="banner bg-color">
+    <div class="text-sm" translate>bannerIntro</div>
 </div>
 <div>
     <select class="form-control" [(ngModel)]="selectLang" name="selectLang" (change)="setTransLanguage()">
