--- a/frontEnd/front/src/styles.scss
+++ b/frontEnd/front/src/styles.scss
@@ -1,5 +1,7 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+@import "primeflex/themes/primeone-light.css";
+@import "primeflex/themes/primeone-dark.css";
 body {
     font-family: var(--font-family);
 }
@@ -19,4 +21,11 @@ body {
 
 .current-node {
     background-color: rgb(233, 233, 233) !important;
+}
+
+.font-color{
+    color: #35B8BE;
+}
+.bg-color{
+    background-color: #35B8BE;
 }
