defined font color

--- a/frontEnd/front/src/app/header/header.component.scss
+++ b/frontEnd/front/src/app/header/header.component.scss
@@ -1,5 +1,7 @@
+@import "src/assets/styles/font-color.scss";
 .banner{
-    color: white;
+    color: $font-white;
     text-align: center;
     padding: 1em;
+    background-color: $font-green;
 }
