--- a/frontEnd/front/src/app/header/header.component.html
+++ b/frontEnd/front/src/app/header/header.component.html
@@ -1,8 +1,11 @@
-<div class="banner bg-color">
-    <div class="text-sm" translate>bannerIntro</div>
+<div class="banner">
+    <span class="text-sm " translate>bannerIntro</span>
+    <span>
+        <select class="select-language text-sm" [(ngModel)]="selectLang" name="selectLang" (change)="setTransLanguage()">
+            <option *ngFor="let lang of transLang" value="{{lang}}" selected="selectLang">{{ lang }}</option>
+        </select>
+    </span>
 </div>
-<div>
-    <select class="form-control" [(ngModel)]="selectLang" name="selectLang" (change)="setTransLanguage()">
-        <option *ngFor="let lang of transLang" value="{{lang}}" selected="selectLang">{{ lang }}</option>
-    </select>
-</div>
+
+
+<p class="hover-underline-animation">Hover effect!</p>
