--- a/frontEnd/front/src/app/header/header.component.html
+++ b/frontEnd/front/src/app/header/header.component.html
@@ -6,6 +6,15 @@
         </select>
     </span>
 </div>
-
-
-<p class="hover-underline-animation">Hover effect!</p>
+<div class="navbar">
+<img src="../../assets/img/franceflag.png">
+<nav>
+    <ul>
+      <li ><a class="hover-underline-animation" routerLink="/home" translate>home</a></li>
+      <li ><a class="hover-underline-animation" routerLink="/data" translate>data</a></li>
+      <li ><a class="hover-underline-animation" routerLink="/settings" translate>settings</a></li>
+      <li ><a class="hover-underline-animation" routerLink="/login" translate>login</a></li>
+    </ul>
+</nav>
+</div>
+  
