added input in login page

--- a/frontEnd/front/src/app/login/login.component.html
+++ b/frontEnd/front/src/app/login/login.component.html
@@ -1,1 +1,6 @@
 <p>login works!</p>
+
+<span class="p-float-label">
+    <input pInputText id="username" [(ngModel)]="username" />
+    <label htmlFor="username">Username</label>
+</span>
