added container in header

--- a/frontEnd/front/src/app/header/header.component.scss
+++ b/frontEnd/front/src/app/header/header.component.scss
@@ -74,3 +74,12 @@ a{
 a:hover{
   color: $font-green;
 }
+
+img{
+  margin-right: 3%;
+}
+
+.container{
+  min-width: fit-content;
+  margin-bottom: 100px;
+}
