--- a/frontEnd/front/src/app/header/header.component.html
+++ b/frontEnd/front/src/app/header/header.component.html
@@ -1,20 +1,22 @@
-<div class="banner">
-    <span class="text-sm " translate>bannerIntro</span>
-    <span>
-        <select class="select-language text-sm" [(ngModel)]="selectLang" name="selectLang" (change)="setTransLanguage()">
-            <option *ngFor="let lang of transLang" value="{{lang}}" selected="selectLang">{{ lang }}</option>
-        </select>
-    </span>
+<div class="container">
+    <div class="banner">
+        <span class="text-sm " translate>bannerIntro</span>
+        <span>
+            <select class="select-language text-sm" [(ngModel)]="selectLang" name="selectLang" (change)="setTransLanguage()">
+                <option *ngFor="let lang of transLang" value="{{lang}}" selected="selectLang">{{ lang }}</option>
+            </select>
+        </span>
+    </div>
+    <div class="navbar">
+        <img src="../../assets/img/logo1.png">
+        <img src="../../assets/img/logo2.png">
+        <nav>
+            <ul>
+            <li ><a class="hover-underline-animation" routerLink="/home" translate>home</a></li>
+            <li ><a class="hover-underline-animation" routerLink="/data" translate>data</a></li>
+            <li ><a class="hover-underline-animation" routerLink="/settings" translate>settings</a></li>
+            <li ><a class="hover-underline-animation" routerLink="/login" translate>login</a></li>
+            </ul>
+        </nav>
+    </div>
 </div>
-<div class="navbar">
-<img src="../../assets/img/franceflag.png">
-<nav>
-    <ul>
-      <li ><a class="hover-underline-animation" routerLink="/home" translate>home</a></li>
-      <li ><a class="hover-underline-animation" routerLink="/data" translate>data</a></li>
-      <li ><a class="hover-underline-animation" routerLink="/settings" translate>settings</a></li>
-      <li ><a class="hover-underline-animation" routerLink="/login" translate>login</a></li>
-    </ul>
-</nav>
-</div>
-  
