feats: add bootstrap

--- a/frontEnd/front/src/app/header/header.component.html
+++ b/frontEnd/front/src/app/header/header.component.html
@@ -11,10 +11,10 @@
 <nav>
     <ul>
       <li ><a class="hover-underline-animation" routerLink="/home" translate>home</a></li>
-      <li ><a class="hover-underline-animation" routerLink="/data" translate>data</a></li>
+      <li ><a class="hover-underline-animation" routerLink="/modeling" translate>data</a></li>
       <li ><a class="hover-underline-animation" routerLink="/settings" translate>settings</a></li>
       <li ><a class="hover-underline-animation" routerLink="/login" translate>login</a></li>
     </ul>
 </nav>
 </div>
-  
+
