--- a/frontEnd/front/src/app/header/header.component.html
+++ b/frontEnd/front/src/app/header/header.component.html
@@ -19,4 +19,8 @@
             </ul>
         </nav>
     </div>
+    <div class="title">
+        <!-- <h1>this is a title</h1> -->
+        <img src="../../assets/img/background.png" class="background">
+    </div>
 </div>
