--- a/frontEnd/front/src/app/header/header.component.html
+++ b/frontEnd/front/src/app/header/header.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="container-fluid p-0">
     <div class="banner">
-        <span class="text-sm " translate>bannerIntro</span>
+        <span translate>bannerIntro</span>
         <span>
-            <select class="select-language text-sm" [(ngModel)]="selectLang" name="selectLang" (change)="setTransLanguage()">
+            <select class="select-language" [(ngModel)]="selectLang" name="selectLang" (change)="setTransLanguage()">
                 <option *ngFor="let lang of transLang" value="{{lang}}" selected="selectLang">{{ lang }}</option>
             </select>
         </span>
@@ -20,7 +20,7 @@
         </nav>
     </div>
     <div class="title">
-        <!-- <h1>this is a title</h1> -->
+        <h1 class="display-1 title-text">This is title </h1>
         <img src="../../assets/img/background.png" class="background">
     </div>
 </div>
