modif text title

--- a/frontEnd/front/src/app/header/header.component.html
+++ b/frontEnd/front/src/app/header/header.component.html
@@ -20,7 +20,8 @@
         </nav>
     </div>
     <div class="title">
-        <h1 class="display-1 title-text">This is title </h1>
+        <h1 class="display-1 title-text" [innerHTML]="'homeTitle' | translate"></h1>
+        
         <img src="../../assets/img/background.png" class="background">
     </div>
 </div>
