--- a/frontEnd/front/src/app/header/header.component.scss
+++ b/frontEnd/front/src/app/header/header.component.scss
@@ -86,7 +86,7 @@ img{
 }
 .background{
   width: 100%;
-  height: auto;
+  min-height: 200px;
   margin-top : 1%;
   margin-bottom: 1%;
   display: block;
