create login and homapage

--- a/frontEnd/front/src/app/login/login.component.scss
+++ b/frontEnd/front/src/app/login/login.component.scss
@@ -2,3 +2,23 @@
 .p-float-label{
     border-color: $font-green;
 }
+
+.login-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.login-title {
+    text-align: center;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
