--- a/frontEnd/front/src/app/login/login.component.html
+++ b/frontEnd/front/src/app/login/login.component.html
@@ -1,6 +1,18 @@
-<p>login works!</p>
-
-<span class="p-float-label">
-    <input pInputText id="username" [(ngModel)]="username" />
-    <label htmlFor="username">Username</label>
-</span>
+<div class="login-container">
+    <h2 class="login-title">Login</h2>
+    <form class="form-container">
+        <div class="form-group">
+            <span class="p-float-label">
+                <input pInputText id="username" name="username" [(ngModel)]="username" required />
+                <label htmlFor="username">Username</label>
+            </span>
+        </div>
+        <div class="form-group">
+            <span class="p-float-label">
+                <input pInputText id="password" name="password" [(ngModel)]="password" required />
+                <label htmlFor="password">Password</label>
+            </span>
+        </div>
+        <button type="submit" pButton class="p-button-primary" (click)="onSubmit()">Submit</button>
+    </form>
+</div>
