--- a/frontEnd/front/src/app/modeling/modeling.component.html
+++ b/frontEnd/front/src/app/modeling/modeling.component.html
@@ -8,25 +8,13 @@
   </div>
 
   <div class="container-fluid justify-content-between p-0 pt-4">
-    <div class="d-flex justify-content-between p-0">
-      <p-button label="Location"
+    <div class="d-flex justify-content-between align-items-center p-0">
+      <p-button *ngFor="let button of buttons"
+                label="{{ button.label }}"
                 styleClass="p-button-outlined"
-                routerLink="/modeling/localisation"
-                aria-pressed="true"
-                (click)="activeIndex = 0"></p-button>
-      <p-button label="Suivi de la ressource en eau"
-                styleClass="p-button-outlined"
-                (click)="activeIndex = 1"></p-button>
-      <p-button label="Modélisation"
-                styleClass="p-button-outlined"
-                (click)="activeIndex = 2"></p-button>
-      <p-button label="Historique"
-                styleClass="p-button-outlined"
-                (click)="activeIndex = 3"></p-button>
-      <p-button label="Prévisions saisionières"
-                styleClass="p-button-outlined"
-                (click)="activeIndex = 4"></p-button>
-    </div>
+                [ngClass]="{'active': activeIndex === button.index}"
+                (click)="activeIndex = button.index">
+      </p-button>
   </div>
 
   <p-tabView [(activeIndex)]="activeIndex">
