--- a/frontEnd/front/src/app/settings/settings.component.html
+++ b/frontEnd/front/src/app/settings/settings.component.html
@@ -1,1 +1,81 @@
 <p>settings works!</p>
+
+<div class="container-xl px-4 mt-4">
+  <!-- Account page navigation-->
+  <div class="row">
+    <div class="col-xl-4">
+      <!-- Profile picture card-->
+      <div class="card mb-4 mb-xl-0">
+        <div class="card-header">Profile Picture</div>
+        <div class="card-body text-center">
+          <!-- Profile picture image-->
+          <img class="img-account-profile rounded-circle mb-2" src="assets/img/avatar.png" width="300" height="300" alt="">
+          <!-- Profile picture help block-->
+          <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
+          <p-button label="Upload new image"></p-button>
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-8">
+      <!-- Account details card-->
+      <div class="card mb-4">
+        <div class="card-header">Account Details</div>
+        <div class="card-body">
+          <form>
+            <!-- Form Group (username)-->
+            <div class="mb-3">
+              <label class="small mb-1" for="inputUsername">Username</label>
+              <input class="form-control" id="inputUsername" type="text" placeholder="Enter your username" value="username">
+            </div>
+            <!-- Form Row-->
+            <div class="row gx-3 mb-3">
+              <!-- Form Group (first name)-->
+              <div class="col-md-6">
+                <label class="small mb-1" for="inputFirstName">First name</label>
+                <input class="form-control" id="inputFirstName" type="text" placeholder="Enter your first name" value="Le Hoang">
+              </div>
+              <!-- Form Group (last name)-->
+              <div class="col-md-6">
+                <label class="small mb-1" for="inputLastName">Last name</label>
+                <input class="form-control" id="inputLastName" type="text" placeholder="Enter your last name" value="Nguyen">
+              </div>
+            </div>
+            <!-- Form Row        -->
+            <div class="row gx-3 mb-3">
+              <!-- Form Group (organization name)-->
+              <div class="col-md-6">
+                <label class="small mb-1" for="inputOrgName">Organization name</label>
+                <input class="form-control" id="inputOrgName" type="text" placeholder="Enter your organization name" value="INSA">
+              </div>
+              <!-- Form Group (location)-->
+              <div class="col-md-6">
+                <label class="small mb-1" for="inputLocation">Location</label>
+                <input class="form-control" id="inputLocation" type="text" placeholder="Enter your location" value="Rennes">
+              </div>
+            </div>
+            <!-- Form Group (email address)-->
+            <div class="mb-3">
+              <label class="small mb-1" for="inputEmailAddress">Email address</label>
+              <input class="form-control" id="inputEmailAddress" type="email" placeholder="Enter your email address" value="insa@fr.com">
+            </div>
+            <!-- Form Row-->
+            <div class="row gx-3 mb-3">
+              <!-- Form Group (phone number)-->
+              <div class="col-md-6">
+                <label class="small mb-1" for="inputPhone">Phone number</label>
+                <input class="form-control" id="inputPhone" type="tel" placeholder="Enter your phone number" value="666 3629">
+              </div>
+              <!-- Form Group (birthday)-->
+              <div class="col-md-6">
+                <label class="small mb-1" for="inputBirthday">Birthday</label>
+                <input class="form-control" id="inputBirthday" type="text" name="birthday" placeholder="Enter your birthday" value="05/10/2001">
+              </div>
+            </div>
+            <!-- Save changes button-->
+            <p-button label="Save changes"></p-button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
