--- a/frontEnd/front/src/app/login/login.component.html
+++ b/frontEnd/front/src/app/login/login.component.html
@@ -1,18 +1,18 @@
 <div class="login-container">
-    <h2 class="login-title">Login</h2>
+    <h2 class="login-title" translate>loginNoun</h2>
     <form class="form-container">
         <div class="form-group">
             <span class="p-float-label">
                 <input pInputText id="username" name="username" [(ngModel)]="username" required />
-                <label htmlFor="username">Username</label>
+                <label htmlFor="username" translate>username</label>
             </span>
         </div>
         <div class="form-group">
             <span class="p-float-label">
                 <input pInputText id="password" name="password" [(ngModel)]="password" required />
-                <label htmlFor="password">Password</label>
+                <label htmlFor="password" translate>password</label>
             </span>
         </div>
-        <button type="submit" pButton class="p-button-primary" (click)="onSubmit()">Submit</button>
+        <button type="submit" pButton class="p-button-primary" (click)="onSubmit()" translate>submit</button>
     </form>
 </div>
