--- a/frontEnd/front/src/app/header/header.component.scss
+++ b/frontEnd/front/src/app/header/header.component.scss
@@ -86,10 +86,13 @@ img{
 }
 .background{
   width: 100%;
+  height: auto;
   min-height: 200px;
   margin-top : 1%;
   margin-bottom: 1%;
   display: block;
+
+
 }
 .title {
   position: relative;
@@ -103,8 +106,11 @@ img{
   left: 50%; /* Position text in the horizontal center */
   transform: translate(-50%, -50%); /* Center the text precisely */
   //margin-left: 5%; /* Remove default margin */
+  font-weight: bold;
+  font-size: 4vw;
 }
 
-strong{
-  font-color: $font-green;
+.highlight {
+  color: $font-green;
+  
 }
