--- a/frontEnd/front/src/styles.scss
+++ b/frontEnd/front/src/styles.scss
@@ -2,6 +2,7 @@
 @import "primeng/resources/primeng.css";
 @import "primeflex/themes/primeone-light.css";
 @import "primeflex/themes/primeone-dark.css";
+@import "src/assets/styles/font-color.scss";
 body {
     font-family: var(--font-family);
     margin: 0;
@@ -25,4 +26,7 @@ body {
     background-color: rgb(233, 233, 233) !important;
 }
 
+strong{
+    font-color: $font-green;
+}
 
