--- a/frontEnd/front/src/app/header/header.component.html
+++ b/frontEnd/front/src/app/header/header.component.html
@@ -13,9 +13,10 @@
         <nav>
             <ul>
             <li ><a class="hover-underline-animation" routerLink="/home" routerLinkActive="active" translate>home</a></li>
-            <li ><a class="hover-underline-animation" routerLink="/modeling" routerLinkActive="active" translate>data</a></li>
-            <li ><a class="hover-underline-animation" routerLink="/settings" routerLinkActive="active" translate>settings</a></li>
-            <li ><a class="hover-underline-animation" routerLink="/login"  routerLinkActive="active" translate>login</a></li>
+            <li *ngIf="this.authService.isLoggedIn" ><a class="hover-underline-animation" routerLink="/modeling" routerLinkActive="active" translate>data</a></li>
+            <li *ngIf="this.authService.isLoggedIn"><a class="hover-underline-animation" routerLink="/settings" routerLinkActive="active" translate>settings</a></li>
+            <li *ngIf="!this.authService.isLoggedIn"><a class="hover-underline-animation" routerLink="/login"  routerLinkActive="active" translate>login</a></li>
+            <li *ngIf="this.authService.isLoggedIn"><a class="hover-underline-animation" routerLink="/login"  routerLinkActive="active" translate (click)="logout()">logout</a></li>
             </ul>
         </nav>
     </div>
