--- a/frontEnd/front/src/app/modeling/localisation/localisation.component.html
+++ b/frontEnd/front/src/app/modeling/localisation/localisation.component.html
@@ -3,5 +3,12 @@
 
   <p>localisation works!</p>
   <app-map></app-map>
+
+  <div class="map-container container-fluid">
+    <div class="map-frame">
+      <div id="map"></div>
+    </div>
+  </div>
+
 </div>
 
