--- a/frontEnd/front/src/app/header/header.component.scss
+++ b/frontEnd/front/src/app/header/header.component.scss
@@ -5,7 +5,12 @@
     padding: 1em;
     background-color: $font-green;
 }
-
+.navbar {
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    background-color: white;
+}
 
 .select-language{
     background-color: $font-white;
@@ -76,7 +81,7 @@ a:hover{
 }
 
 img{
-  margin-right: 3%;
+  margin-right: 1%;
 }
 
 .container{
