--- a/frontEnd/front/src/app/header/header.component.html
+++ b/frontEnd/front/src/app/header/header.component.html
@@ -8,7 +8,7 @@
         </span>
     </div>
     <div class="navbar">
-        <img src="../../assets/img/logo1.png">
+        <img class="cydre-logo" src="../../assets/img/logo1.png">
         <img src="../../assets/img/logo2.png">
         <nav>
             <ul>
