--- a/frontEnd/front/src/app/login/login.component.scss
+++ b/frontEnd/front/src/app/login/login.component.scss
@@ -22,3 +22,15 @@
     justify-content: center;
     gap: 1rem;
 }
+
+button{
+    background-color: $font-green;
+    border-color: $font-green;
+    color: $font-white;
+}
+
+button:hover{
+    background-color: $font-white;
+    border-color: $font-green;
+    color: $font-green;
+}
