--- a/frontEnd/front/src/app/header/header.component.scss
+++ b/frontEnd/front/src/app/header/header.component.scss
@@ -75,6 +75,9 @@ a{
   text-decoration: none;
   color: $font-black;
   font-weight: 500;
+  font-size: 1.25rem;
+  text-align: center;
+
 }
 a:hover{
   color: $font-green;
